@@ -1,3 +1,8 @@
+2008-04-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/35773
+	* g++.dg/overload/autoptr1.C: New.
+
 2008-04-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
